# agent_tracer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: tests.yml
devtools/: build_release.sh  hook_pre_commit.sh  run_all_agent_validations.sh
docs/: claude_md_snippet.md  how_to_implement_tasks.md  skill.md
docs/spec/: how_to_write_specs.md  main_spec.md
docs/tasks/: current_task_list.md  task_implementation_plan.md
docs/tech_spec/: high_level_architecture.md
notebooks/: misc.ipynb
proj_name/: main.py
projects/pytest_tracer_python/: CLAUDE.md  pyproject.toml  pytest.ini
projects/pytest_tracer_python/devtools/: run_all_agent_validations.sh
projects/pytest_tracer_python/pytest_tracer_python/: __init__.py  cache.py  cli.py  collector.py  markers.py  models.py  tracer.py
projects/pytest_tracer_python/tests/: conftest.py  test_cache.py  test_cli.py  test_collector.py  test_models.py  test_stub.py  test_tracer.py
projects/pytest_tracer_python/tests/fixtures/cache/59c102a50197d3db/: scenarios.json
projects/pytest_tracer_python/tests/fixtures/sample_project/: conftest.py  pytest.ini
projects/pytest_tracer_python/tests/fixtures/sample_project/src/: __init__.py  auth.py  orders.py
projects/pytest_tracer_python/tests/fixtures/sample_project/tests/: test_auth.py  test_orders.py
projects/pytest_tracer_python/tests/fixtures/sample_project_2/: conftest.py  pytest.ini
projects/pytest_tracer_python/tests/fixtures/sample_project_2/src/: __init__.py
projects/pytest_tracer_python/tests/fixtures/sample_project_2/src/models/: __init__.py  base.py  task.py  user.py
projects/pytest_tracer_python/tests/fixtures/sample_project_2/src/services/: __init__.py  task_service.py  user_service.py
projects/pytest_tracer_python/tests/fixtures/sample_project_2/src/utils/: __init__.py  formatting.py  validation.py
projects/pytest_tracer_python/tests/fixtures/sample_project_2/tests/: test_edge_cases.py  test_task_service.py  test_user_service.py
projects/pytest_tracer_python/tests/fixtures/sample_project_3/: call_traces.json  conftest.py  example_diagram.md  example_flamegraph.html  scenarios.json
projects/pytest_tracer_python/tests/fixtures/sample_project_3/src/middleware/: auth.py
projects/pytest_tracer_python/tests/fixtures/sample_project_3/src/models/: __init__.py  order.py  product.py
projects/pytest_tracer_python/tests/fixtures/sample_project_3/src/repositories/: __init__.py  order_repository.py  product_repository.py
projects/pytest_tracer_python/tests/fixtures/sample_project_3/src/routes/: __init__.py  order_routes.py
projects/pytest_tracer_python/tests/fixtures/sample_project_3/src/services/: __init__.py  order_service.py
projects/pytest_tracer_python/tests/fixtures/sample_project_3/tests/: test_order_flow.py  test_service_direct.py
projects/trace_analyzer/: CLAUDE.md  Cargo.toml
projects/trace_analyzer/devtools/: run_all_agent_validations.sh  run_lint_format_auto_fix.sh  run_lint_format_check.sh  run_tests.sh
projects/trace_analyzer/src/: call_trace.rs  coverage.rs  diagram.rs  error.rs  gallery.rs  lib.rs  main.rs  models.rs  run.rs  scenarios.rs
projects/trace_analyzer/src/gallery_assets/: flamegraph.js  gallery.html
projects/trace_analyzer/src/index/: builder.rs  mod.rs  schema.rs
projects/trace_analyzer/src/mcp/: mod.rs
projects/trace_analyzer/src/query/: mod.rs
projects/trace_analyzer/tests/: integration_test.rs
pytest_tracer_python/: main.py
tests/: e2e_workflow_test.sh  test_stub.py
