[project]
name = "pytest-tracer"
version = "0.1.0"
description = "Pytest plugin for capturing scenario test metadata and enabling AI agent context gathering"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
]

[project.scripts]
pytest-tracer = "pytest_tracer_python.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytest_tracer_python"]



[dependency-groups]
dev = [
  # "ipykernel>=7.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=7.0.0",
    "pytest-testmon>=2.1.3",
    "pytest-watch>=4.2.0",
    "ruff>=0.11.12",
    "ty>=0.0.1a21",
]

[tool.ruff]
target-version = "py313"
line-length = 120

exclude = [
  ".eggs",
  ".git",
  ".git-rewrite",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  "venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "build",
  "dist",
  "node_modules",
  "site-packages",
]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "ANN",  # flake8-annotations - type annotation rules.
  "B",  # flake8-bugbear
  "I",  # ~isort
  ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]  # Ignore redefinition warnings in test files (pytest fixtures)
# Sample project fixture files are example tests - don't require annotations
"tests/fixtures/sample_project/*" = ["ANN"]
"tests/fixtures/sample_project_2/*" = ["ANN"]
"tests/fixtures/sample_project_3/*" = ["ANN"]

