[package]
name = "trace_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Agent Tracer Contributors"]
description = "Trace analyzer - CLI and MCP server for analyzing test traces"

[[bin]]
name = "trace_analyzer"
path = "src/main.rs"

[dependencies]
# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
