[package]
name = "trace_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Agent Tracer Contributors"]
description = "Trace analyzer - CLI and MCP server for analyzing test traces"

[lib]
name = "trace_analyzer"
path = "src/lib.rs"

[[bin]]
name = "trace"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.0"

# Database (for .coverage parsing and index storage)
rusqlite = { version = "0.31", features = ["bundled"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# MCP Server
rmcp = { version = "0.9", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }

# Flame graph SVG rendering (pure Rust port of flamegraph.pl)
inferno = { version = "0.12", default-features = false }

# SVG to PNG rendering (pure Rust, no system deps)
resvg = "0.45"

# Python AST parsing (for line->function mapping)
# tree-sitter = "0.22"
# tree-sitter-python = "0.21"

[dev-dependencies]
tempfile = "3.10"
